--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "11-mongodb-single-resource",
+  "name": "we-connect-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "jest": {
     "setupFiles": [
